kubernetes/headscale/manifest/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headscale
  namespace: my-headscale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: hs.local.127.0.0.1.sslip.io
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: headscale
         port:
          number: 8080
  tls: []

# ---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: headscale
#   namespace: my-headscale
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
# spec:
#   rules:
#   - host: hs.local.127.0.0.1.sslip.io
#     http:
#      paths:
#      - path: /metrics
#        pathType: Prefix
#        backend:
#         service:
#          name: headscale-metrik
#          port:
#           number: 9090
#   tls: []

# ---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: headscale-grpc
#   namespace: my-headscale
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
# spec:
#   rules:
#   - host: hs-grpc.local.127.0.0.1.sslip.io
#     http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#         service:
#          name: headscale-grpc
#          port:
#           number: 50443
#   tls: []
